--- a/index.html
+++ b/index.html
@@ -14,18 +14,28 @@
         .highlight-warning { border-left: 4px solid #f59e0b; background-color: #fffbeb; }
         .animate-fade-in { animation: fadeIn 0.5s ease-out; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        
+        /* Estilo para el logo */
+        .logo-img {
+            height: 60px;
+            width: auto;
+            object-fit: contain;
+        }
     </style>
 </head>
 <body class="bg-slate-50 min-h-screen font-sans">
 
     <div class="max-w-4xl mx-auto p-4 md:p-8">
-        <!-- Header -->
-        <header class="flex items-center justify-between mb-8 bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
-            <div>
-                <h1 class="text-2xl font-bold text-indigo-700">CoHumanAI: Writing Coach</h1>
-                <p class="text-slate-500">Nivel Pre-B1 | Versión Offline para GitHub Pages</p>
+        <!-- Header con Logo -->
+        <header class="flex flex-col sm:flex-row items-center justify-between mb-8 bg-white p-6 rounded-2xl shadow-sm border border-slate-100 gap-4">
+            <div class="flex items-center gap-4">
+                <img src="capablanca-1.jpg" alt="Logo Capi" class="logo-img" onerror="this.style.display='none'">
+                <div>
+                    <h1 class="text-2xl font-bold text-indigo-700">CoHumanAI: Writing Coach</h1>
+                    <p class="text-slate-500 text-sm">Nivel Pre-B1 | Versión Offline para GitHub Pages</p>
+                </div>
             </div>
-            <div class="bg-indigo-100 p-3 rounded-xl text-indigo-700">
+            <div class="bg-indigo-100 p-3 rounded-xl text-indigo-700 hidden sm:block">
                 <i class="fa-solid fa-pen-nib text-2xl"></i>
             </div>
         </header>
