Update checklist items in index.html

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                     </h3>
                     <ul class="text-sm text-slate-600 space-y-2">
                         <li id="check-greeting">❌ Saluda (Dear Sal,)</li>
-                        <li id="check-content">❌ Menciona una app/web</li>
-                        <li id="check-functions">❌ Explica qué puedes hacer</li>
-                        <li id="check-reason">❌ Di por qué te gusta</li>
+                        <li id="check-content">❌ Habla de ti y de internet</li>
+                        <li id="check-functions">❌ Qué ves online</li>
+                        <li id="check-reason">❌ Cuanto tiempo pasas en internet</li>
+                        <li id="check-reason">❌ Qué tres cosas haces más cuando estás en internet</li>
                         <li id="check-closing">❌ Despídete (Write soon,)</li>
                     </ul>
                 </div>
