--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     
                     <textarea id="emailInput" rows="10" 
                         class="w-full p-4 text-slate-700 border border-slate-200 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all"
-                        placeholder="Dear Sal, ..."></textarea>
+                        placeholder="Dear Sam, ..."></textarea>
 
                     <div class="mt-6 flex flex-col sm:flex-row gap-3">
                         <button id="analyzeBtn" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-xl transition-all flex items-center justify-center gap-2">
